--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Özel Mesaj</title>
+    <title>ebrar icinnnnnnnnnnn</title>
     <style>
         body {
             background: #ffb6c1;
